--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.12.0",
+    "@emotion/styled": "^11.12.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@popperjs/core": "^2.11.8",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
